Fixed skew seperator getting cut off on wide screens

--- a/assets/scss/custom/_separator.scss
+++ b/assets/scss/custom/_separator.scss
@@ -37,9 +37,3 @@
 .separator-inverse {
     transform: rotate(180deg);
 }
-
-// Styles
-
-.separator-skew {
-    height: 60px;
-}
